--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "biome check ./src",
+    "lint:fix": "biome check --write ./src && format",
+    "typecheck": "tsc --noEmit --incremental false",
+    "format": "biome format --write ./src",
+    "format:check": "biome format ."
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -14,14 +18,15 @@
     "next": "15.1.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@biomejs/biome": "2.0.5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
