--- a/biome.json
+++ b/biome.json
@@ -1,34 +1,5 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "vcs": { "enabled": true, "clientKind": "git", "useIgnoreFile": false },
-  "files": {
-    "ignoreUnknown": false,
-    "ignore": [
-      "./node_modules",
-      "./.pnp",
-      "**/.pnp.js",
-      "./coverage",
-      "**/.next",
-      "./.next/",
-      "./out/",
-      "./build",
-      "**/.DS_Store",
-      "**/*.pem",
-      "**/npm-debug.log*",
-      "**/yarn-debug.log*",
-      "**/yarn-error.log*",
-      "**/.pnpm-debug.log*",
-      "**/.env.local",
-      "**/.env.development.local",
-      "**/.env.test.local",
-      "**/.env.production.local",
-      "**/.vercel",
-      "**/CHANGELOG.md",
-      "**/pnpm-lock.yaml",
-      "./src/lib/zod/**/*.ts",
-      "./src/lib/enums.ts"
-    ]
-  },
   "formatter": {
     "enabled": true,
     "useEditorconfig": true,
@@ -42,17 +13,14 @@
     "bracketSameLine": false,
     "expand": "auto"
   },
-  "organizeImports": { "enabled": true },
   "linter": {
     "enabled": true,
     "rules": {
       "recommended": false,
       "complexity": {
         "noExtraBooleanCast": "error",
-        "noMultipleSpacesInRegularExpressionLiterals": "error",
         "noUselessCatch": "error",
         "noUselessTypeConstraint": "error",
-        "noWith": "error",
         "noAdjacentSpacesInRegex": "error",
         "noUselessEscapeInRegex": "error"
       },
@@ -78,18 +46,15 @@
         "noUnusedLabels": "error",
         "noUnusedPrivateClassMembers": "error",
         "noUnusedVariables": "warn",
-        "useArrayLiterals": "off",
         "useIsNan": "error",
         "useValidForDirection": "error",
-        "useValidTypeof": "error",
         "useYield": "error"
       },
       "style": {
         "noCommonJs": "error",
         "noNamespace": "error",
         "useAsConstAssertion": "error",
-        "useBlockStatements": "off",
-        "useArrayLiterals": "error"
+        "useBlockStatements": "off"
       },
       "suspicious": {
         "noAsyncPromiseExecutor": "error",
@@ -119,14 +84,12 @@
         "noUnsafeDeclarationMerging": "error",
         "noUnsafeNegation": "error",
         "useGetterReturn": "error",
-        "useNamespaceKeyword": "error",
-        "useValidTypeof": "error"
+        "useNamespaceKeyword": "error"
       },
       "nursery": {
         "useSortedClasses": "error"
       }
-    },
-    "ignore": ["prisma/*"]
+    }
   },
   "javascript": {
     "formatter": {
@@ -144,7 +107,6 @@
   },
   "overrides": [
     {
-      "include": ["*.ts", "*.tsx", "*.mts", "*.cts"],
       "linter": {
         "rules": {
           "correctness": {
@@ -152,15 +114,12 @@
             "noGlobalObjectCalls": "off",
             "noInvalidBuiltinInstantiation": "off",
             "noInvalidConstructorSuper": "off",
-            "noNewSymbol": "off",
             "noSetterReturn": "off",
             "noUndeclaredVariables": "off",
             "noUnreachable": "off",
             "noUnreachableSuper": "off"
           },
           "style": {
-            "noArguments": "error",
-            "noVar": "error",
             "useConst": "error"
           },
           "suspicious": {
@@ -178,7 +137,6 @@
       }
     },
     {
-      "include": ["*.ts", "*.tsx", "*.mts", "*.cts"],
       "linter": {
         "rules": {
           "correctness": {
@@ -186,15 +144,12 @@
             "noGlobalObjectCalls": "off",
             "noInvalidBuiltinInstantiation": "off",
             "noInvalidConstructorSuper": "off",
-            "noNewSymbol": "off",
             "noSetterReturn": "off",
             "noUndeclaredVariables": "off",
             "noUnreachable": "off",
             "noUnreachableSuper": "off"
           },
           "style": {
-            "noArguments": "error",
-            "noVar": "error",
             "useConst": "error"
           },
           "suspicious": {
