--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@commitlint/types": "^19.8.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "next": "15.1.7",
@@ -22,6 +23,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.5",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
