--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
   },
   "dependencies": {
     "@commitlint/types": "^19.8.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
+    "lucide-react": "^0.525.0",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.5",
