feat: home layout & shared component add

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,5 @@
 {
   "**/*.{js,jsx,ts,tsx,json,css,scss,md,webmanifest}": [
-    "biome check ./src --write",
-    "biome check ./src"
+    "biome check ./src --write"
   ]
 }
